avances de appLove

--- a/nuestras coders/index.html
+++ b/nuestras coders/index.html
@@ -1,38 +1,16 @@
 <!DOCTYPE html>
   <html>
     <head>
-    <meta charset='uft-8'>
-    <title>Nuestras Coders</title>
-    <link rel='stylesheet' href='css/main.css'>
+      <meta charset='uft-8'>
+      <title>Nuestras Coders</title>
+      <link rel='stylesheet' href='css/main.css'>
     </head>
     <body>
-      <section>
-        <h3>Nuestras Coders</h3>
-        <hr>
-        <div>
-          <img src='http://dummyimage.com/50x50'>
-          <p>Andrea Mares</p>
-        </div>
-        <div>
-          <img src='http://dummyimage.com/50x50'>
-          <p>Andrea Santos</p>
-        </div>
-        <div>
-          <img src='http://dummyimage.com/50x50'>
-          <p>Andrea Rosas</p>
-        </div>
-        <div>
-          <img src='http://dummyimage.com/50x50'>
-          <p>Andrea Sierra</p>
-        </div>
-        <div>
-          <img src='http://dummyimage.com/50x50'>
-          <p>Andrea Sare</p>
-        </div>
-        <div>
-          <img src='http://dummyimage.com/50x50'>
-          <p>Andrea Sosa</p>
-        </div>
-      </section>
+      <main>
+        <header>
+        </header>
+
+      </main>
     </body>
+
   </html>
