--- a/applove/index.html
+++ b/applove/index.html
@@ -5,52 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='css/main.css'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <title>AppLove</title>
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a>Services</a></li>
-          <li><a>Work</a></li>
-          <li><a>The team</a></li>
-          <img id=logo src='assets/images/logo.png'>
-       </ul>
-      </nav>
+        <div class='text-uppercase'>
+          <a>Services</a>
+          <a>Work</a>
+          <a>The Team</a>
+          <img id='logo'src='assets/images/logo.png'>
+       </div>
     </header>
-    <img src='assets/images/bg-home.jpg'>
-    <img src='assets/images/hero.png'>
-    <img src='assets/images/bg-home.jpg'>
-    <img src='assets/images/services-1.png'>
-    <img src='assets/images/services-2.png'>
-    <img src='assets/images/services-3.png'>
-    <img src='assets/images/work-1.jpg'>
-    <img src='assets/images/work-2.jpg'>
-    <img src='assets/images/work-3.jpg'>
-    <img src='assets/images/work-4.jpg'>
-    <img src='assets/images/work-5.jpg'>
-    <img src='assets/images/work-6.jpg'>
-    <img src='assets/images/work-7.jpg'>
-    <img src='assets/images/work-8.jpg'>
-    <img src='assets/images/work-9.jpg'>
-    <img src='assets/images/work-10.jpg'>
-    <img src='assets/images/work-11.jpg'>
-    <img src='assets/images/work-12.jpg'>
+  <!--  <img src='assets/images/bg-home.jpg'>
+     -->
     <section>
-      <div>
+      <div class='text-uppercase'>
         <h2>you just found an untilmate</h2>
         <h1>We are applove from heart</h1>
         <p>handcrafted - modern design - pixel perfect - passioned design</p>
         <a>View services</a>
       </div>
+      <img src='assets/images/bg-home.jpg'>
     </section>
     <section>
-      <div>
+      <div class=pink>
         <h2>Services</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
+        <img src='assets/images/services-1.png'width='200px'>
+        <img src='assets/images/services-2.png'width='200px'>
+        <img src='assets/images/services-3.png'width='200px'>
         <div>
           <h5>user interface design</h5>
           <h6>Wireframing</h6>
@@ -73,12 +60,27 @@
     </section>
     <section>
       <div>
-        <h2>work</h2>
+        <h2 class='text-uppercase'>work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
       </div>
+        <img src='assets/images/hero.png' width="1000px">
+          <article class='text-uppercase'>
+            <img src='assets/images/work-1.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-2.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-3.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-4.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-5.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-6.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-7.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-8.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-9.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-10.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-11.jpg' width='300px'><span>Nombre del proyecto</span>
+            <img src='assets/images/work-12.jpg' width='300px'><span>Nombre del proyecto</span>
+          </article>
     </section>
     <footer>
       <p>&#169; Copyright</p>
